# rembg.cpp

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  rembg.cpp  rembg.h
.github/workflows/: windows-cmake.yml
examples/: CMakeLists.txt  rembg_bytes.cpp  rembg_mask.cpp
scripts/: download_onnxruntime.ps1  download_u2netp.ps1
